# MLops_bim_bim_bam_bam_bum_bum_chipi_chipi

./: .env  Dockerfile  README.md  dvc.yaml  main.py  project_structure.txt  pyproject.toml  requirements.txt  setup_environment.bat  test_s3.py  test_upload.txt  train_service.proto
.dvc/: config
.github/workflows/: ci.yaml
app/: config.py  dashboard.py  main.py  minio_client.py  test_minio_client.py  train_service.py  train_service_pb2_grpc.py
data/: test_data.txt.dvc
mlOPS/: decision_tree_1.joblib  train_service.proto.txt
mlOPS/app/: dashboard.py  main.py  train_service.py  train_service_pb2.py
src/: s3_utils.py  train.py
tests/: conftest.py  test_model.py  test_s3.py  test_s3_utils.py
